# fanyi

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  install.sh
src/: main.rs
src/cli/: args.rs  mod.rs
src/config/: mod.rs  settings.rs
src/translator/: baidu.rs  mod.rs  trait_def.rs
src/ui/: colors.rs  mod.rs
