[package]
name = "fanyi"
version = "0.1.0"
edition = "2021"

[dependencies]
# 命令行解析
clap = { version = "4.5", features = ["derive"] }

# HTTP请求
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }

# 配置管理
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
dirs = "5.0"

# 颜色输出
colored = "2.1"

# 错误处理
anyhow = "1.0"
thiserror = "1.0"

# 加密（API签名）
md5 = "0.7"

# 异步trait支持
async-trait = "0.1"
